-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.4.0
-
None
-
-
6c90c04fb (dev), 39daa368d (dev), e918efcd7 (6.5), dbe7f136a (6.5)
-
Foundation Sprint 74
The example seems to have been broken for a while now.
https://bugreports.qt.io/browse/QTBUG-30329
Torrent status suck at Searching.
Please, could someone have a look and revive this example?
Thank you
- is required for
-
QTBUG-110622 Revamp torrent example
-
- Closed
-
For Gerrit Dashboard: QTBUG-109798 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
456275,4 | Torrent example: Use QByteArray toPercentEncoding | dev | qt/qtbase | Status: MERGED | +2 | 0 |
456282,2 | Torrent example: don't try to announce to an empty URL | dev | qt/qtbase | Status: MERGED | +2 | 0 |
457123,2 | Torrent example: don't try to announce to an empty URL | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
457126,2 | Torrent example: Use QByteArray toPercentEncoding | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |